@@ -18,6 +18,10 @@ Modify the config file /var/run/obdftdipty.device according to
 dot-obdgpslogger(5) after successfully setting up pty
 .IP "-b|--baudrate <rate>"
 Attempt to set ftdi baudrate to this after launching.
+.IP "-V|--vendorid <hex vendor id>"
+Use this vendorid when looking for devices
+.IP "-D|--deviceid <hex device id>"
+Use this deviceid when looking for devices
 .IP "-d|--daemonise"
 Daemonise after successful setup
 .IP "-v|--version"
